<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.myles.udacity.cigarquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Question #1 -->
        <TextView
            style="@style/QuestionHeader"
            android:text="@string/q1_header_text" />

        <CheckBox
            android:id="@+id/q1_content1"
            style="@style/QuestionContent"
            android:paddingLeft="@dimen/checkbox_inner_padding"
            android:text="@string/q1_content1_text" />

        <CheckBox
            android:id="@+id/q1_content2"
            style="@style/QuestionContent"
            android:paddingLeft="@dimen/checkbox_inner_padding"
            android:text="@string/q1_content2_text" />

        <CheckBox
            android:id="@+id/q1_content3"
            style="@style/QuestionContent"
            android:paddingLeft="@dimen/checkbox_inner_padding"
            android:text="@string/q1_content3_text" />

        <CheckBox
            android:id="@+id/q1_content4"
            style="@style/QuestionContent"
            android:paddingLeft="@dimen/checkbox_inner_padding"
            android:text="@string/q1_content4_text" />

        <!-- Question #2-->
        <TextView
            style="@style/QuestionHeader"
            android:text="@string/q2_header_text" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q2_content1"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q2_content1_text" />

            <RadioButton
                android:id="@+id/q2_content2"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q2_content2_text" />

            <RadioButton
                android:id="@+id/q2_content3"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q2_content3_text" />

            <RadioButton
                android:id="@+id/q2_content4"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q2_content4_text" />

        </RadioGroup>

        <!-- Question #3-->
        <TextView
            style="@style/QuestionHeader"
            android:text="@string/q3_header_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/q3_image" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q3_content1"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q3_content1_text" />

            <RadioButton
                android:id="@+id/q3_content2"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q3_content2_text" />

            <RadioButton
                android:id="@+id/q3_content3"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q3_content3_text" />

            <RadioButton
                android:id="@+id/q3_content4"
                style="@style/QuestionContent"
                android:paddingLeft="@dimen/radiobutton_inner_padding"
                android:text="@string/q3_content4_text" />
        </RadioGroup>

        <!-- Question 4-->
        <TextView
            style="@style/QuestionHeader"
            android:text="@string/q4_header_text" />

        <EditText
            android:id="@+id/q4_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q4_content_hint"
            android:inputType="text"/>

        <!-- Score button-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="#FFA000"
            android:textColor="#EEEEEE"
            android:text="@string/submit_button_text"
            android:onClick="submitQuiz"/>
    </LinearLayout>

</ScrollView>